--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Blog Cafe</title>
+    <meta name="description" content="Pagina web de blog de café">
 
     <!-- Prefetch -->
     <link rel="prefetch" href="nosotros.html" as="document">
