--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
               Precio: <span class="widget-curso__info">Gratis</span>
             </p>
             <p class="widget-curso__label">Cupo: <span class="widget-curso__info">20</span></p>
-            <a href="entrada.html" class="boton boton--secundario">Más Información</a>
+            <a href="entrada.html" class="boton boton--secundario">Más Información  sobre nuestros cursos</a>
           </li>
 
           <li class="widget-curso">
@@ -147,7 +147,7 @@
               Precio: <span class="widget-curso__info">Gratis</span>
             </p>
             <p>Cupo: <span>20</span></p>
-            <a href="entrada.html" class="boton boton--secundario">Más Información</a>
+            <a href="entrada.html" class="boton boton--secundario">Más Información sobre nuestros cursos</a>
           </li>
         </ul>
       </aside>
